--- a/app/src/main/res/menu/activity_dash_board_drawer.xml
+++ b/app/src/main/res/menu/activity_dash_board_drawer.xml
@@ -26,6 +26,11 @@
             android:id="@+id/nav_conta"
             android:icon="@drawable/ic_person_black_36dp"
             android:title="@string/nav_conta" />
+
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_local_taxi_black_36dp"
+            android:title="@string/nav_conta" />
     </group>
 
 </menu>
