--- a/app/src/main/res/layout/item_breja.xml
+++ b/app/src/main/res/layout/item_breja.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/rounded_top_card_view_bg_light">
+        android:background="@color/colorBgLight">
 
         <LinearLayout
             android:id="@+id/containerHeader"
@@ -61,6 +61,7 @@
                         android:id="@+id/nameBrewer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/card_vertical_margin_space_small"
                         android:text="Guinness"
                         style="@style/NameBrewer"/>
 
@@ -68,6 +69,7 @@
                         android:id="@+id/nameCountry"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/card_vertical_margin_space"
                         android:text="Irlanda"
                         style="@style/OtherDelaisBeer"/>
 
@@ -75,6 +77,7 @@
                         android:id="@+id/typeBeer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/card_vertical_margin_space_small"
                         android:text="Classic Irish-Style Dry Stout"
                         android:maxLines="2"
                         style="@style/OtherDelaisBeer"/>
@@ -105,7 +108,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/rounded_bottom_card_view_brown">
+            android:background="@color/colorPrimaryDark">
 
             <TextView
                 android:id="@+id/varAbv"
