--- a/app/src/main/res/menu/activity_dash_board_drawer.xml
+++ b/app/src/main/res/menu/activity_dash_board_drawer.xml
@@ -30,7 +30,7 @@
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_local_taxi_black_36dp"
-            android:title="@string/nav_conta" />
+            android:title="@string/nav_logout" />
     </group>
 
 </menu>
